[package]
name = "memcached"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
config = "0.13.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0"
bytes = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
